<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/subscription_button"
        android:enabled="true"
        android:icon="@drawable/subs_icon"
        android:title="@string/subs_button_text"/>
    <item
        android:id="@+id/playlist_button"
        android:enabled="true"
        android:icon="@drawable/playlist_icon"
        android:title="@string/playlist_button_text"/>
    <item
        android:id="@+id/search_button"
        android:enabled="true"
        android:icon="@drawable/search_icon"
        android:title="@string/search_button_text"/>
    <item
        android:id="@+id/history_button"
        android:enabled="true"
        android:icon="@drawable/history_icon"
        android:title="@string/history_button_text"/>

    <item
        android:id="@+id/profile_button"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile_button_text"/>
</menu>